Added functions design, a little rough - but works.
Ready for lots more content that can all be cross-referenced now.

Signed-off-by: Dave Shanley <dshanley@splunk.com>

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -17,14 +17,14 @@
     'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
     })(window,document,'script','dataLayer','GTM-PC979K2');</script>
     <!-- End Google Tag Manager -->
-    
+
 <script src="{{ .Site.BaseURL }}assets/bundle.js"></script>
 <style>
     :root {
         --global-font-size: 17px;
         --toc-font-size: 0.7rem;
         --breadcrumb-font-size: 0.75rem;
-        --childnav-font-size: 0.85rem;
+        --childnav-font-size: 0.75rem;
         --nav-font-size: 0.95rem;
         --toc-font-header-size: 0.85rem;
         --rule-item-header-fontsize: 1.2rem;
@@ -54,6 +54,7 @@
         --rule-item-border: rgba(35, 43, 58, 0.9);
         --navigation-hover: #b685ff33;
         --navigation-child-selected: rgba(182, 133, 255, 0.26);
+        --navigation-child-hover: rgba(179, 131, 250, 0.09);
         --navigation-child-container: rgba(182, 133, 255, 0.10);
         --page-width: 65em;
         --font-color: #e8e9ed;
