functions and rules designs at MVP
All the content elements that I can think of are now in. It’s just a case of bashing through the content now.

Signed-off-by: Dave Shanley <dshanley@splunk.com>

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -33,6 +33,8 @@
         --rule-type-fontsize: 0.7rem;
         --rule-severity-fontsize: 0.8rem;
         --rule-recommended-fontsize: 0.7rem;
+        --rule-function-fontsize: 0.8rem;
+
         --rule-recommended-banner-fontsize: 1rem;
         --rule-panel-label: 0.7rem;
         --rule-id-fontsize: 2rem;
