--- a/static/assets/vacuum.css
+++ b/static/assets/vacuum.css
@@ -219,6 +219,13 @@ section.rule-details, section.function-details {
     font-size: 1rem;
 }
 
+section.rule-details p > a:before, section.function-details p > a:before {
+    content: "🔗[";
+}
+
+section.rule-details p > a:after, section.function-details p > a:after {
+    content: "]";
+}
 
 section.rule-details p code,section.function-details p code {
     border: 1px solid #1a681a;
