Adding content, updated syntax styling.
Too many pinks and yellows. Cleaned it up, feels much closer to the brand now. new content incoming, finalizing the core function designs (that use tables for props and examples).

Signed-off-by: Dave Shanley <dave@quobix.com>

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -17,7 +17,7 @@
     'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
     })(window,document,'script','dataLayer','GTM-PC979K2');</script>
     <!-- End Google Tag Manager -->
-
+<link rel="preload" href="{{ .Site.BaseURL }}assets/bundle.js" as="script">
 <script src="{{ .Site.BaseURL }}assets/bundle.js"></script>
 <style>
     :root {
