Added schema and openapi-tags content
also cleaning up the syntax as I settle in on some final updates colors (man, I am so bad with colors).

Signed-off-by: Dave Shanley <dave@quobix.com>

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -82,6 +82,7 @@
         --terminal-yellow: #fddb00;
         --hrcolor: #3d3d3d;
         --code-border: #525252;
+        --string-literal: #fd66e5;
 
 
 
