Re-worked breadcumbs after a fresh brain.
Had time to re-think over night.

Signed-off-by: Dave Shanley <dave@quobix.com>

--- a/layouts/partials/vacuum/breadcrumb.html
+++ b/layouts/partials/vacuum/breadcrumb.html
@@ -1,16 +1,19 @@
 <div class="breadcrumbs">
-  <ul>
-    {{ template "breadcrumbnav" (dict "p1" . "p2" .) }}
+  <ul vocab="https://schema.org/" typeof="BreadcrumbList">
+    {{ template "breadcrumbnav" (dict "p1" . "p2" . "i" 1) }}
   </ul>
 </div>
 
 {{ define "breadcrumbnav" }}
 {{ if .p1.Parent }}
-{{ template "breadcrumbnav" (dict "p1" .p1.Parent "p2" .p2 )  }}
+{{ $n := add .i 1 }}
+{{ template "breadcrumbnav" (dict "p1" .p1.Parent "p2" .p2 "i" $n )  }}
 {{ end }}
 {{ if not (eq .p1.RelPermalink "/") }}
-<li{{ if eq .p1 .p2 }} class="crumb-active"{{ end }}>
-  <a href="{{ .p1.Permalink }}">{{ .p1.LinkTitle }}</a>
+<li{{ if eq .p1 .p2 }} class="crumb-active"{{ end }} property="itemListElement" typeof="ListItem">
+  <a property="item" typeof="WebPage" href="{{ .p1.Permalink }}">
+    <span property="name">{{ .p1.LinkTitle }}</span></a>
+    <meta property="position" content="{{ .i }}">
 </li>
 {{end}}
 {{ end }}
