Trying to fix the now broken navigation!
Not sure how this became busted in prod, works locally.

Signed-off-by: Dave Shanley <dave@quobix.com>

--- a/layouts/partials/vacuum/navigation.html
+++ b/layouts/partials/vacuum/navigation.html
@@ -2,7 +2,7 @@
    <vacuum-desktop-navigation>
         {{ $currentPage := . }}
         {{ range $index, $element := .Site.Menus.vacuum.ByWeight }}
-        <vacuum-nav-item position={{ add $index 1 }} url="{{ $element.URL }}" name="{{ $element.Name }}" {{- if $currentPage.IsMenuCurrent "vacuum" . }}open='true'{{end}}{{- if $currentPage.HasMenuCurrent "vacuum" . }}open='true'{{end}}>
+        <vacuum-nav-item url="{{ $element.URL }}" name="{{ $element.Name }}" {{ if $currentPage.IsMenuCurrent "vacuum" . }}open="true"{{end}}{{ if $currentPage.HasMenuCurrent "vacuum" . }}open="true"{{end}}>
         {{- if .HasChildren -}}
 
         <ul class="navigation-children">
