Something is wrong, trying to fix.
not sure why, but hugo is failing in prod rendering menus correctly. some strange sort of caching going on I think.

Signed-off-by: Dave Shanley <dave@quobix.com>

--- a/layouts/partials/vacuum/navigation.html
+++ b/layouts/partials/vacuum/navigation.html
@@ -2,6 +2,7 @@
    <vacuum-desktop-navigation>
         {{ $currentPage := . }}
         {{ range $index, $element := .Site.Menus.vacuum.ByWeight }}
+        <span style="display: none">what is going on here?</span>
         <vacuum-nav-item url="{{ $element.URL }}" name="{{ $element.Name }}" {{ if $currentPage.IsMenuCurrent "vacuum" . }}open="true"{{end}}{{ if $currentPage.HasMenuCurrent "vacuum" . }}open="true"{{end}}>
         {{- if .HasChildren -}}
 
