--- a/layouts/vacuum/baseof.html
+++ b/layouts/vacuum/baseof.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    {{ partial "structured-data" . }}
-    {{ partial "head" . }}
+    {{ partial "vacuum/structured-data" . }}
+    {{ partial "vacuum/head" . }}
 <link rel="stylesheet" href="{{ .Site.BaseURL }}assets/vacuum.css" />
 </head>
 
