--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -2,9 +2,9 @@
 <link rel="apple-touch-icon" sizes="180x180" href="{{ .Site.BaseURL }}/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="{{ .Site.BaseURL }}favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="{{ .Site.BaseURL }}favicon-16x16.png">
-<meta name="description" content="quobix.com, home of Dave Shanley">
+<meta name="description" content="quobix::vaccum, The worlds fastest OpenAPI linter. {{ .Description }}">
 <meta charset="UTF-8">
-<meta name="keywords" content="dave shanley, shanley, code, golang, java, typescript, quobix, engineer">
+<meta name="keywords" content="OpenAPI, swagger, linting, linter, vacuum, dave shanley, shanley, code, golang, java, javascript, typescript, quobix, engineer">
 <!-- use creds whilst protected -->
 <link crossorigin="use-credentials" rel="manifest" href="{{ .Site.BaseURL }}site.webmanifest" />
 <meta name="author" content="Dave Shanley">
@@ -12,11 +12,11 @@
 <title>{{ block "title" . }}{{ if .IsHome }}{{ .Site.Title }}: code is art{{ else }}quobix: {{ .Title }}{{ end }}{{ end }}</title>
 <!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-    })(window,document,'script','dataLayer','GTM-PC979K2');</script>
-    <!-- End Google Tag Manager -->
+      new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-PC979K2');</script>
+<!-- End Google Tag Manager -->
 <link rel="preload" href="{{ .Site.BaseURL }}assets/bundle.js" as="script">
 <script src="{{ .Site.BaseURL }}assets/bundle.js"></script>
 {{ partial "colors" }}
