updated some core content and some css.

--- a/layouts/partials/vacuum/navigation.html
+++ b/layouts/partials/vacuum/navigation.html
@@ -28,7 +28,7 @@
    </vacuum-desktop-navigation>
 
     <hr class="nav-divider" />
-    <a  class="github-link" href="https://github.com/daveshanley/vacuum">Github</a>
+    <a  class="github-link" href="https://github.com/daveshanley/vacuum">GitHub</a>
 </nav>
 <mobile-nav>
     <ul class="mobile-nav">
