Added custom rulesets content
added no-rules content and re-fixed navigation again. and then updated other content with links.

--- a/static/assets/vacuum.css
+++ b/static/assets/vacuum.css
@@ -181,6 +181,20 @@ h1.rule-id {
     line-height: 1rem;
 }
 
+.table-of-contents ul > li > ul {
+   margin-left: 5px;
+   margin-top: 10px;
+}
+
+.table-of-contents ul > li > ul > li {
+   font-size: 0.65rem;
+   line-height: 0.2rem;
+}
+
+.table-of-contents ul > li > ul > li:before {
+   content: "- "
+}
+
 
 .table-of-contents p {
     color: var(--tertiary-color);
@@ -342,6 +356,7 @@ li.mobile-nav::after {
     font-size: var(--rule-item-details-fontsize);
     color: var(--tertiary-color);
 }
+
 
 /* mobile */
 
