--- a/static/assets/vacuum.css
+++ b/static/assets/vacuum.css
@@ -23,6 +23,7 @@ h4 {
     padding-top: 0;
     margin-top: 0;
     margin-bottom: 0;
+    border-bottom: 1px dashed var(--secondary-color-lowalpha);
 }
 
 .github-link {
@@ -326,7 +327,7 @@ li.mobile-nav::after {
 }
 
 .article-body h2 {
-    margin-top: 80px;
+    margin-top: 60px;
 }
 
 .rule-category-list, .function-list {
